# trabalho.capm

./: .gitattributes  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh  streamlit_app.py
.github/workflows/: ci.yml  external-sources.yml
.streamlit/: config.toml
configs/: embraer.toml  example.toml
dados/: analise_capm_embraer.xlsx  dados_capm_embraer.xlsx  resultado_capm_embraer.xlsx
dados/streamlit/: dimensao_calendario.csv  fato_capm_mensal.csv  metodologia_fontes.csv  resumo_indicadores.csv
dados/streamlit/embraer/: fato_capm_mensal.csv  metodologia_fontes.csv  resumo_indicadores.csv
examples/offline/: cdi.csv  embraer_prices.csv  fict3_prices.csv  ibovespa_prices.csv  market_prices.csv  risk_free.csv
relatorio/: nota_tecnica_capm_embraer.docx
src/capm/: __init__.py  cli.py  config.py  data_sources.py  exports.py  model.py  regression.py  returns.py  validation.py
tests/: smoke_streamlit.py
tests/integration/: test_offline_pipeline.py
tests/unit/: test_math.py  test_validation_config.py
